--- a/force-app/main/default/classes/GGW_Util.cls
+++ b/force-app/main/default/classes/GGW_Util.cls
@@ -33,6 +33,10 @@ public with sharing class GGW_Util {
     // Method save Langugae selection to user state
     public static String saveGrantLanguage(String lang, String grantId){
         String msg = 'Save language select failed.';
+
+        Boolean editableField = GGW_PermissionValidator.getInstance()
+            .hasStandFLSAccessForFields('GGW_Grant_State__c', new List<String>{ 'Language__c', 'Grant_Application__c' }, 'upsert');
+        
         GGW_Grant_State__c st = getGrantState();
         if(st != null && st.Id != null){
             if(isValidString(lang)){
@@ -41,7 +45,7 @@ public with sharing class GGW_Util {
             if(isValidString(grantId)){
                 st.Grant_Application__c = grantId;
             }
-            if(Schema.sObjectType.GGW_Grant_State__c.isUpdateable()){
+            if(Schema.sObjectType.GGW_Grant_State__c.isUpdateable() && editableField){
                 update st;
                 msg = 'Language state is updated';
             }
@@ -53,6 +57,10 @@ public with sharing class GGW_Util {
     // Create New Grant state record for user when there is NONE exists
     private static String insertNewState(String lang, String grantId){
         String msg = 'New state insert failed.';
+
+        Boolean editableField = GGW_PermissionValidator.getInstance()
+            .hasStandFLSAccessForFields('GGW_Grant_State__c', new List<String>{ 'Language__c', 'Grant_Application__c', 'Current_User__c'}, 'upsert');
+        
         GGW_Grant_State__c st = new GGW_Grant_State__c();
         st.Current_User__c = UserInfo.getUserId(); // save state for current user
         if(isValidString(lang)){
@@ -63,7 +71,7 @@ public with sharing class GGW_Util {
         if(isValidString(grantId)){
             st.Grant_Application__c = grantId;
         }
-        if(Schema.sObjectType.GGW_Grant_State__c.isCreateable()){
+        if(Schema.sObjectType.GGW_Grant_State__c.isCreateable() && editableField){
             insert st;
             msg = 'NEW Language state is inserted';
         }
@@ -71,18 +79,23 @@ public with sharing class GGW_Util {
     }
     // Save Grant state for User
     public static void saveGrantState(String grantId){
+        
+        Boolean editableField = GGW_PermissionValidator.getInstance()
+            .hasStandFLSAccessForFields('GGW_Grant_State__c', new List<String>{ 'Language__c', 'Grant_Application__c', 'Current_User__c'}, 'upsert');
+        
+
         GGW_Grant_State__c st = getGrantState();
         if(st != null && st.Id != null){
             // Update existing single state
             st.Grant_Application__c = grantId;
-            if(Schema.sObjectType.GGW_Grant_State__c.isUpdateable()){
+            if(Schema.sObjectType.GGW_Grant_State__c.isUpdateable() && editableField){
                 update st;
             }
         }else{
             st = new GGW_Grant_State__c();
             st.Current_User__c = UserInfo.getUserId(); // save state for current user
             st.Grant_Application__c = grantId;
-            if(Schema.sObjectType.GGW_Grant_State__c.isCreateable()){
+            if(Schema.sObjectType.GGW_Grant_State__c.isCreateable() && editableField){
                 insert st;
             }
         }
