Updated variable in Util class

--- a/force-app/main/default/classes/GGW_Util.cls
+++ b/force-app/main/default/classes/GGW_Util.cls
@@ -58,7 +58,7 @@ public with sharing class GGW_Util {
     private static String insertNewState(String lang, String grantId){
         String msg = 'New state insert failed.';
 
-        Boolean editableField = GGW_PermissionValidator.getInstance()
+        Boolean editableField2 = GGW_PermissionValidator.getInstance()
             .hasFLSAccessForFields('%%%NAMESPACED_ORG%%%GGW_Grant_State__c', new List<String>{ '%%%NAMESPACED_ORG%%%Language__c', '%%%NAMESPACED_ORG%%%Grant_Application__c', '%%%NAMESPACED_ORG%%%Current_User__c'}, 'upsert');
         
         GGW_Grant_State__c st = new GGW_Grant_State__c();
@@ -71,7 +71,7 @@ public with sharing class GGW_Util {
         if(isValidString(grantId)){
             st.Grant_Application__c = grantId;
         }
-        if(Schema.sObjectType.GGW_Grant_State__c.isCreateable() && editableField){
+        if(Schema.sObjectType.GGW_Grant_State__c.isCreateable() && editableField2){
             insert st;
             msg = 'NEW Language state is inserted';
         }
@@ -80,7 +80,7 @@ public with sharing class GGW_Util {
     // Save Grant state for User
     public static void saveGrantState(String grantId){
         
-        Boolean editableField = GGW_PermissionValidator.getInstance()
+        Boolean editableField3 = GGW_PermissionValidator.getInstance()
             .hasFLSAccessForFields('%%%NAMESPACED_ORG%%%GGW_Grant_State__c', new List<String>{ '%%%NAMESPACED_ORG%%%Language__c', '%%%NAMESPACED_ORG%%%Grant_Application__c', '%%%NAMESPACED_ORG%%%Current_User__c'}, 'upsert');
         
 
@@ -88,14 +88,14 @@ public with sharing class GGW_Util {
         if(st != null && st.Id != null){
             // Update existing single state
             st.Grant_Application__c = grantId;
-            if(Schema.sObjectType.GGW_Grant_State__c.isUpdateable() && editableField){
+            if(Schema.sObjectType.GGW_Grant_State__c.isUpdateable() && editableField3){
                 update st;
             }
         }else{
             st = new GGW_Grant_State__c();
             st.Current_User__c = UserInfo.getUserId(); // save state for current user
             st.Grant_Application__c = grantId;
-            if(Schema.sObjectType.GGW_Grant_State__c.isCreateable() && editableField){
+            if(Schema.sObjectType.GGW_Grant_State__c.isCreateable() && editableField3){
                 insert st;
             }
         }
